--- a/site/templates/twig/code-tables/mar/spm/form/vendorid.twig
+++ b/site/templates/twig/code-tables/mar/spm/form/vendorid.twig
@@ -16,7 +16,7 @@
 					'colorclass': 'btn-secondary',
 					'text': 'fa fa-search'|icon,
 					'attributes': {
-						'title': 'Search Salesperson Groups',
+						'title': 'Search Vendors',
 						'data-toggle': 'modal',
 						'data-target': '#ajax-modal',
 						'data-lookupurl': page.searchLookupUrl('vendors'),
