--- a/site/templates/twig/code-tables/mgl/dtm/form.twig
+++ b/site/templates/twig/code-tables/mgl/dtm/form.twig
@@ -44,7 +44,7 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search GL Accounts',
+									'title': 'Search General Ledger Accounts',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
 									'data-lookupurl': page.searchLookupUrl('gl-codes/'),
