--- a/site/templates/twig/items/itm/misc/form/misc/left.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/left.twig
@@ -25,10 +25,10 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search for / Choose Tariff Code',
+									'title': 'Search Tariff Codes',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
-									'data-lookupurl': page.search_lookupURL('tariff-codes'),
+									'data-lookupurl': page.searchLookupUrl('tariff-codes'),
 									'data-input': '#tariffcode',
 									'data-search': 'tariffcode',
 								}
@@ -79,7 +79,7 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search for / Choose Country',
+									'title': 'Search Country Codesy',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
 									'data-lookupurl': page.search_lookupURL('country-codes'),
@@ -125,7 +125,7 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search for / Choose Msds Code',
+									'title': 'Search MSDS Codes',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
 									'data-lookupurl': page.search_lookupURL('msds-codes'),
@@ -171,7 +171,7 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search for / Choose Freight',
+									'title': 'Search Freight Codes',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
 									'data-lookupurl': page.search_lookupURL('freight-codes'),
