--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -48,7 +48,7 @@
 							'colorclass': 'btn-secondary',
 							'text': 'fa fa-search'|icon,
 							'attributes': {
-								'title': 'Search Options',
+								'title': 'IN Optional Code Options',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
 								'data-lookupurl': '',
