--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
@@ -40,7 +40,7 @@
 								'title': 'Search Items',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('items'),
+								'data-lookupurl': page.searchLookupUrl('items'),
 								'data-input': '#subitemID'
 							}
 						}
