--- a/site/templates/twig/items/mxrfe/new-xref-modal.twig
+++ b/site/templates/twig/items/mxrfe/new-xref-modal.twig
@@ -27,7 +27,7 @@
 										'colorclass': 'btn-secondary',
 										'text': 'fa fa-search'|icon,
 										'attributes': {
-											'title': 'Search Manufacturers',
+											'title': 'Search Vendors',
 											'data-toggle': 'modal',
 											'data-target': '#ajax-modal',
 											'data-lookupurl': page.search_lookupURL('vendors'),
