--- a/site/templates/twig/items/vxm/new-xref-modal.twig
+++ b/site/templates/twig/items/vxm/new-xref-modal.twig
@@ -30,7 +30,7 @@
 											'title': 'Search Vendors',
 											'data-toggle': 'modal',
 											'data-target': '#ajax-modal',
-											'data-lookupurl': page.search_lookupURL('vendors'),
+											'data-lookupurl': page.searchLookupUrl('vendors'),
 											'data-input': '#newvendorID'
 										}
 									}
