--- a/site/templates/twig/items/vxm/xref/form/key.twig
+++ b/site/templates/twig/items/vxm/xref/form/key.twig
@@ -29,7 +29,7 @@
 								'title': 'Search Vendors',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('vendors'),
+								'data-lookupurl': page.searchLookupUrl('vendors'),
 								'data-input': '#vendorID'
 							}
 						}
@@ -101,7 +101,7 @@
 							'title': 'Search Items',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('items'),
+							'data-lookupurl': page.searchLookupUrl('items'),
 							'data-input': '#itemID'
 						}
 					}
