--- a/site/templates/twig/mar/arproc/ecr/customer/payment/form/left.twig
+++ b/site/templates/twig/mar/arproc/ecr/customer/payment/form/left.twig
@@ -48,7 +48,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Cash Accounts',
+							'title': 'Search General Ledger Accounts',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.searchLookupUrl('mgl/mhm'),
@@ -87,7 +87,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Credit Accounts',
+							'title': 'Search General Ledger Accounts',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.searchLookupUrl('mgl/mhm'),
