--- a/site/templates/twig/mki/kim/kit/component/form.twig
+++ b/site/templates/twig/mki/kim/kit/component/form.twig
@@ -44,7 +44,7 @@
 								'title': 'Search Items',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('items'),
+								'data-lookupurl': page.searchLookup('items'),
 								'data-input': '#component',
 								'data-ajaxfields': 'description'
 							}
