--- a/site/templates/twig/purchase-orders/purchase-order/edit/header/form-right.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/header/form-right.twig
@@ -171,7 +171,7 @@
 								'colorclass': 'btn-secondary',
 								'text': 'fa fa-search'|icon,
 								'attributes': {
-									'title': 'Search / Select Vendor Ship-From',
+									'title': 'Search Country Codes',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
 									'data-lookupurl': page.searchLookupUrl('country-codes'),
