--- a/site/templates/twig/sales-orders/sales-order/edit/edit-item/form/non-stock.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/edit-item/form/non-stock.twig
@@ -31,7 +31,7 @@
 								'title': 'Search Vendors',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('vendors'),
+								'data-lookupurl': page.searchLookupUrl('vendors'),
 								'data-input': '#nsvendorid'
 							}
 						}
@@ -76,7 +76,7 @@
 								'title': 'Search Item Groups',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('item-groups'),
+								'data-lookupurl': page.searchLookupUrl('item-groups'),
 								'data-input': '#nsitemgroupid'
 							}
 						}
