--- a/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/restock-modal.twig
+++ b/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/restock-modal.twig
@@ -38,7 +38,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Bins',
+							'title': 'Search Warehouse Bins',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.searchLookupUrl('warehouse/bins/'),
