--- a/site/templates/twig/cart/lookup/form/input-itemid.twig
+++ b/site/templates/twig/cart/lookup/form/input-itemid.twig
@@ -17,7 +17,7 @@
 					'title': 'Search Items',
 					'data-toggle': 'modal',
 					'data-target': '#ajax-modal',
-					'data-lookupurl': page.search_lookupURL('items'),
+					'data-lookupurl': page.searchLookupUrl('items'),
 					'data-input': '#additemID'
 				}
 			}
