--- a/site/templates/twig/code-tables/mso/rgasc/form.twig
+++ b/site/templates/twig/code-tables/mso/rgasc/form.twig
@@ -30,7 +30,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search for / Choose Warehouse',
+							'title': 'Search Warehouses',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.searchLookupUrl('warehouses'),
