--- a/site/templates/twig/items/itm/xrefs/form.twig
+++ b/site/templates/twig/items/itm/xrefs/form.twig
@@ -79,7 +79,7 @@
 									'title': 'Search Items',
 									'data-toggle': 'modal',
 									'data-target': '#ajax-modal',
-									'data-lookupurl': page.search_lookupURL('items'),
+									'data-lookupurl': page.searchLookupUrl('items'),
 									'data-input': '#supercede'
 								}
 							}
