--- a/site/templates/twig/items/mxrfe/xref/form/key.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/key.twig
@@ -29,10 +29,10 @@
 							'colorclass': 'btn-secondary',
 							'text': 'fa fa-search'|icon,
 							'attributes': {
-								'title': 'Search Vendors',
+								'title': 'Search Manufacturers',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('vendors'),
+								'data-lookupurl': page.searchLookupUrl('vendors'),
 								'data-input': '#mnfrID'
 							}
 						}
@@ -89,7 +89,7 @@
 							'title': 'Search for / Choose Item',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('items'),
+							'data-lookupurl': page.searchLookupUrl('items'),
 							'data-input': '#itemID',
 							'data-itemid': xref.itemid
 						}
