--- a/site/templates/twig/items/upcx/form/key.twig
+++ b/site/templates/twig/items/upcx/form/key.twig
@@ -43,7 +43,7 @@
 							'title': 'Search Items',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('items'),
+							'data-lookupurl': page.searchLookupUrl('items'),
 							'data-input': '#itemID'
 						}
 					}
