--- a/site/templates/twig/mar/armain/pty3/customer-accounts/form.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/form.twig
@@ -50,7 +50,7 @@
 							'colorclass': 'btn-secondary',
 							'text': 'fa fa-search'|icon,
 							'attributes': {
-								'title': 'Search States',
+								'title': 'Search State Codes',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
 								'data-lookupurl': page.searchLookupUrl('misc/state-codes/'),
@@ -87,7 +87,7 @@
 							'colorclass': 'btn-secondary',
 							'text': 'fa fa-search'|icon,
 							'attributes': {
-								'title': 'Search Countries',
+								'title': 'Search Country Codes',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
 								'data-lookupurl': page.searchLookupUrl('misc/country-codes/'),
