--- a/site/templates/twig/mar/armain/spm/form/fields.twig
+++ b/site/templates/twig/mar/armain/spm/form/fields.twig
@@ -88,10 +88,10 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Login IDs',
+							'title': 'Search Users',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('users'),
+							'data-lookupurl': page.searchLookupUrl('users'),
 							'data-input': '#userid'
 						}
 					}
@@ -166,10 +166,10 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Vendor IDs',
+							'title': 'Search Vendors',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('vendors'),
+							'data-lookupurl': page.searchLookupUrl('vendors'),
 							'data-input': '#vendorid'
 						}
 					}
