--- a/site/templates/twig/mpm/bmm/list/list.twig
+++ b/site/templates/twig/mpm/bmm/list/list.twig
@@ -29,7 +29,7 @@
 								'title': 'Search Items',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('items')
+								'data-lookupurl': page.searchLookupUrl('items')
 							}
 						}
 					}
