--- a/site/templates/twig/purchase-orders/invoices/invoice/lookup-form.twig
+++ b/site/templates/twig/purchase-orders/invoices/invoice/lookup-form.twig
@@ -17,10 +17,10 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search for / Choose AP Invoice',
+							'title': 'Search AP Invoices',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('purchase-orders'),
+							'data-lookupurl': page.searchLookupUrl('purchase-orders'),
 							'data-input': '#invnbr'
 						}
 					}
