--- a/site/templates/twig/quotes/customer/customer-form.twig
+++ b/site/templates/twig/quotes/customer/customer-form.twig
@@ -20,7 +20,7 @@
 							'title': 'Search Customers',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('customers'),
+							'data-lookupurl': page.searchLookupUrl('customers'),
 							'data-input': '#custID'
 						}
 					}
