--- a/site/templates/twig/sales-orders/sales-order/edit/edit-item/form/basic-inputs.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/edit-item/form/basic-inputs.twig
@@ -21,10 +21,10 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Item IDs',
+							'title': 'Search Items',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.search_lookupURL('items'),
+							'data-lookupurl': page.searchLookupUrl('items'),
 							'data-input': '#itemID'
 						}
 					}
@@ -147,7 +147,7 @@
 						'colorclass': 'btn-secondary',
 						'text': 'fa fa-search'|icon,
 						'attributes': {
-							'title': 'Search Warehouse IDs',
+							'title': 'Search Warehouses',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
 							'data-lookupurl': page.search_lookupURL('warehouses'),
