--- a/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
+++ b/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
@@ -16,6 +16,7 @@
 								'aria-label':  'Tax Code',
 								'data-jqv': 'true',
 								'unique': 'taxcode',
+								'data-index': index,
 							}
 						},
 						'button': {
