--- a/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mar/tm/js/classes/Form.js.twig
@@ -24,9 +24,16 @@ class CodeForm {
 			this.inputs.code.attr('readonly', 'true');
 			this.inputs.description.val(json.description);
 
-			for (var i = 1; i < 11; i++) {
+			for (var i = 1; i <= 9; i++) {
 				this.inputs.taxcode(i).val(json['taxcode' + i]);
 				this.inputs.taxcode(i).change();
+
+				if (i > 1) {
+					if (json['taxcode' + i] == '' && json['taxcode' + (i - 1)] == '') {
+						this.inputs.taxcode(i).parent('.input-group').find('button[data-lookupurl]').attr('disabled', 'disabled');
+						this.inputs.taxcode(i).attr('readonly', 'readonly');
+					}
+				}
 			}
 
 			var validator = this.inputs.form.validate();
