--- a/site/templates/twig/code-tables/mar/ctm/edit/form/mail-list.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/form/mail-list.twig
@@ -1,7 +1,6 @@
-<div class="row mb-3">
-	<div class="col-sm-4">
-		<label for="maillist">Mail List?</label>
-	</div>
+<label for="maillist">Mail List?</label>
+
+<div class="row">
 	<div class="col-sm-3">
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
