--- a/site/templates/twig/code-tables/mar/ctm/edit/qnotes/display.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/qnotes/display.twig
@@ -2,7 +2,7 @@
 	{% for qnotes in manager.qnotes.getQnotes() %}
 		<li class="nav-item" role="presentation">
 			<a class="nav-link {{ loop.first ? 'active' : '' }}" id="{{ constant('TYPE', qnotes) }}-tab" data-toggle="tab" href="#{{ constant('TYPE', qnotes) }}" role="tab" aria-controls="{{ constant('TYPE', qnotes) }}" aria-selected="true">
-				{{ notesType.getNotetypeDescription()|capitalize }} ({{ constant('TYPE', qnotes) }})
+				{{ qnotes.getNotetypeDescription()|title }}
 			</a>
 		</li>
 	{% endfor %}
@@ -15,7 +15,7 @@
 			<div class="list-group">
 				<div class="list-group-item list-group-item-action bg-dark text-white">
 					<div class="row">
-						<div class="col-sm-10">{{ qnotes.getNotetypeDescription()|capitalize }} Notes</div>
+						<div class="col-sm-10">{{ qnotes.getNotetypeDescription()|title }} Notes</div>
 					</div>
 				</div>
 
