--- a/site/templates/twig/code-tables/mar/ctm/edit/form/mail-list.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/form/mail-list.twig
@@ -1,17 +1,7 @@
-<label for="maillist">Mail List?</label>
+<label for="maillist">Mail List</label>
 
 <div class="row">
 	<div class="col-sm-3">
-		{% include 'util/bootstrap/form/select-simple.twig' with {
-				'select': {
-					'name': 'maillist',
-					'value': code.maillist,
-					'size': 'sm',
-					'haskeys': true,
-					'options': {'Y': 'yes', 'N': 'no'},
-					'capitalizelabels': true,
-				}
-			}
-		%}
+		
 	</div>
 </div>
