--- a/site/templates/twig/code-tables/mar/ctm/list.twig
+++ b/site/templates/twig/code-tables/mar/ctm/list.twig
@@ -1,18 +1,18 @@
 {% extends 'code-tables/list.twig' %}
 
 {% block header_div %}
-	<div class="list-group-item bg-dark text-white">
-		<div class="row align-items-center">
+	<div class="list-group-item bg-dark text-white px-2">
+		<div class="form-row align-items-center">
 			<div class="col-1">
 				Code
 			</div>
 			<div class="col-3">
 				Description
 			</div>
-			<div class="col-1">
+			<div class="col-1 text-right">
 				Mail
 			</div>
-			<div class="col-1">
+			<div class="col-1 text-center text-bold">
 				Notes :
 			</div>
 			<div class="col-1">
@@ -39,48 +39,50 @@
 {% endblock %}
 
 {% for code in codes %}
-	{% block code_row %}
-		<div class="row align-items-center">
-			<div class="col-1 font-monospace">
-				{{ code.code|replace({' ': '&nbsp;'})|raw }}
-			</div>
-			<div class="col-3">
-				{{ code.description }}
-			</div>
-			<div class="col-1">
-				{{ code.mail_list }}
-			</div>
-			<div class="col-1">
+	{% block code_div %}
+		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item px-2 code pb-1 pt-1 {{ (response.key is same as(code.code) and response.hasSuccess()) ? 'bg-success text-white' : ''}}">
+			<div class="form-row align-items-center">
+				<div class="col-1 font-monospace">
+					{{ code.code|replace({' ': '&nbsp;'})|raw }}
+				</div>
+				<div class="col-3">
+					{{ code.description }}
+				</div>
+				<div class="col-1 text-right">
+					{{ code.mail_list }}
+				</div>
+				<div class="col-1">
 
-			</div>
-			<div class="col-1">
-				{{ code.count_notetype('SCTP') ? 'Y' : 'N' }}
-			</div>
-			<div class="col-1">
-				{{ code.count_notetype('ICTP') ? 'Y' : 'N' }}
-			</div>
-			<div class="col-1">
-				{{ code.count_notetype('PCTP') ? 'Y' : 'N' }}
-			</div>
-			<div class="col-1">
-				{{ code.count_notetype('KCTP') ? 'Y' : 'N' }}
-			</div>
-			<div class="col-2 text-center">
-				{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
-					{% if page.is_print() == false %}
-						<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm" title="Edit" aria-label="Edit">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
-						&nbsp;
-						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button" title="Delete" aria-label="Delete">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+				</div>
+				<div class="col-1">
+					{{ code.count_notetype('SCTP') ? 'Y' : 'N' }}
+				</div>
+				<div class="col-1">
+					{{ code.count_notetype('ICTP') ? 'Y' : 'N' }}
+				</div>
+				<div class="col-1">
+					{{ code.count_notetype('PCTP') ? 'Y' : 'N' }}
+				</div>
+				<div class="col-1">
+					{{ code.count_notetype('KCTP') ? 'Y' : 'N' }}
+				</div>
+				<div class="col-2 text-center">
+					{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
+						{% if page.is_print() == false %}
+							<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm" title="Edit" aria-label="Edit">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							&nbsp;
+							<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button" title="Delete" aria-label="Delete">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% endif %}
+					{% else %}
+						<span class="badge badge-secondary">
+							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
+						</span>
 					{% endif %}
-				{% else %}
-					<span class="badge badge-secondary">
-						<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
-					</span>
-				{% endif %}
+				</div>
 			</div>
 		</div>
 	{% endblock %}
